--- a/.github/workflows/film_notify_bot.yml
+++ b/.github/workflows/film_notify_bot.yml
@@ -45,6 +45,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add sent_tmdb_ids.txt
+          git add scripts/sent_tmdb_ids.txt
           git diff-index --quiet HEAD || git commit -m "update: update sent_tmdb_ids.txt"
           git push
