--- a/.github/workflows/film_notify_bot.yml
+++ b/.github/workflows/film_notify_bot.yml
@@ -46,5 +46,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add scripts/sent_tmdb_ids.txt
-          git diff-index --quiet HEAD || git commit -m "update: update sent_tmdb_ids.txt"
+          git diff-index --quiet HEAD || git commit -m "update: sent_tmdb_ids.txt"
           git push
