--- a/.github/workflows/film_notify_bot.yml
+++ b/.github/workflows/film_notify_bot.yml
@@ -23,24 +23,24 @@ jobs:
       TELEGRAM_CHAT_IDS: ${{ secrets.TELEGRAM_CHAT_IDS }}   # Telegram Chat IDs / 接收消息的聊天 ID，可多个用空格分隔
 
     steps:
-      # ---------------- 步骤 1️⃣ 检出仓库 / Checkout Repository ----------------
+      # ---------------- 步骤 1 检出仓库 / Checkout Repository ----------------
       - name: Checkout repository
         uses: actions/checkout@v3
         # 说明 / Description: 获取当前仓库代码，用于运行脚本并提交去重文件 / Get repository code to run script and commit dedup file
 
-      # ---------------- 步骤 2️⃣ 安装依赖 / Install Dependencies ----------------
+      # ---------------- 步骤 2 安装依赖 / Install Dependencies ----------------
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y bash jq curl git
         # 说明 / Description: 安装脚本所需工具 / Install required tools for the script
 
-      # ---------------- 步骤 3️⃣ 运行通知脚本 / Run Film Notify Bot ----------------
+      # ---------------- 步骤 3 运行通知脚本 / Run Film Notify Bot ----------------
       - name: Run Film Notify Bot
         run: |
           chmod +x ./scripts/film_notify_bot.sh
           ./scripts/film_notify_bot.sh
         # 说明 / Description: 执行脚本获取新电影并输出 / Execute script to fetch new movies and print messages
 
-      # ---------------- 步骤 4️⃣ 提交更新后的去重文件 / Commit Updated Dedup File ----------------
+      # ---------------- 步骤 4 提交更新后的去重文件 / Commit Updated Dedup File ----------------
       - name: Commit updated dedup file
         run: |
           git config user.name "github-actions[bot]"
