--- a/.github/workflows/film_notify_bot.yml
+++ b/.github/workflows/film_notify_bot.yml
@@ -9,6 +9,7 @@ on:
 # ---------------- 权限 / Permissions ----------------
 permissions:
   contents: write  # 允许写入仓库内容（提交去重文件） / Allow writing to repo for dedup file commit
+  workflows: write
 
 jobs:
   notify:
