--- a/.github/workflows/film_notify_bot.yml
+++ b/.github/workflows/film_notify_bot.yml
@@ -16,12 +16,12 @@ jobs:
 
     # ---------------- 环境变量 / Environment Variables ----------------
     env:
-      MDBLIST_API_KEY: ${{ secrets.MDBLIST_API_KEY }}          # MDblist API Key
-      MDBLIST_LIST_ID: ${{ secrets.MDBLIST_LIST_ID }}          # Watchlist ID / 监控列表 ID
-      TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}                # TMDB API Key
-      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}    # Telegram Bot Token
-      TELEGRAM_CHAT_IDS: ${{ secrets.TELEGRAM_CHAT_IDS }}      # Target chat IDs (space separated) / 目标聊天 ID，可多个用空格分隔
-      TELEGRAM_BUTTON_URL: ${{ secrets.TELEGRAM_BUTTON_URL }}  # Telegram Button URL / Telegram 按钮链接
+      MDBLIST_API_KEY: '${{ secrets.MDBLIST_API_KEY }}'          # MDblist API Key
+      MDBLIST_LIST_ID: '${{ secrets.MDBLIST_LIST_ID }}'          # Watchlist ID / 监控列表 ID
+      TMDB_API_KEY: '${{ secrets.TMDB_API_KEY }}'                # TMDB API Key
+      TELEGRAM_BOT_TOKEN: '${{ secrets.TELEGRAM_BOT_TOKEN }}'    # Telegram Bot Token
+      TELEGRAM_CHAT_IDS: '${{ secrets.TELEGRAM_CHAT_IDS }}'      # Target chat IDs (space separated) / 目标聊天 ID，可多个用空格分隔
+      TELEGRAM_BUTTON_URL: '${{ secrets.TELEGRAM_BUTTON_URL }}'  # Telegram Button URL / Telegram 按钮链接
 
     steps:
       # ---------------- 步骤 1 检出仓库 / Checkout Repository ----------------
